Fix long-text width and word-break in stylesheet.css

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -333,10 +333,10 @@ a[target] {
 
 /* text effect */
 
-.long-text {
+/* .long-text {
   width: 75%;
   word-break: keep-all;
-}
+} */
 
 /* imge */
 
